--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "colors": "^1.4.0",
+    "commando-provider-mongo": "^2.0.2",
     "discord.js": "^12.5.1",
     "discord.js-commando": "^0.11.1",
     "dotenv": "^8.2.0",
@@ -29,5 +30,4 @@
     "url": "https://github.com/Antares-Network/AntaresBotRewrite/issues"
   },
   "homepage": "https://github.com/Antares-Network/AntaresBotRewrite#readme"
-  
 }
