--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "antaresbotrewrite",
-  "version": "1.3.0",
+  "version": "1.3.0-RC1",
   "description": "A rewrite of the Antares bot ",
   "main": "index.js",
   "dependencies": {
