--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "antaresbotrewrite",
+  "name": "antaresbot",
   "version": "1.3.1",
   "description": "A rewrite of the Antares bot ",
   "main": "index.js",
