--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "discord.js-commando": "^0.11.1",
     "dotenv": "^8.2.0",
     "fetch": "^1.1.0",
+    "mcdata": "^1.0.9",
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.0",
     "path": "^0.12.7",
