Unbanning now behaves as expected
Prior to this commit, the unBan* commands returned `undefined`, but the function's return value was being treated as a boolean.

Return statements have been added to make these work as intended.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
