--- a/.github/workflows/node.js.main.yml
+++ b/.github/workflows/node.js.main.yml
@@ -25,6 +25,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+      env:
+        BOT_MONGO_PATH: ${{ secrets.BOT_MONGO_PATH }}
     - run: npm i
     - run: npm run build --if-present
     - run: npm start
