--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
     "test": "node test.js",
     "start": "node index.js"
   },
+  "eslintConfig": {
+    "globals": {
+      "botVersion":true,
+      "config":true,
+      "bot":true
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Antares-Network/AntaresBot.git"
