--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "chalk": "^4.1.2",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
+    "mongoose": "^6.0.6",
     "path": "^0.12.7",
     "wokcommands": "^1.3.983"
   },
