--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "path": "^0.12.7",
     "wokcommands": "^1.3.983"
   },
+  "type": "module",
   "main": "index.ts",
   "scripts": {
     "test": "test.ts"
