--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm install typescript ts-node
+    - run: npm install -g ts-node typescript
     - run: ts-node index.ts
       env:
         BOT_MONGO_PATH: ${{ secrets.BOT_MONGO_PATH }}
