--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm install -g ts-node typescript
-    - run: ts-node index.ts
+    - run: ts-node test.ts
       env:
         BOT_MONGO_PATH: ${{ secrets.BOT_MONGO_PATH }}
         BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
