--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^10.0.0",
     "mongoose": "^6.0.6",
     "path": "^0.12.7",
+    "reddit-image-fetcher": "^2.0.9",
     "wokcommands": "^1.3.983"
   },
   "main": "index.ts",
