--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mongoose": "^6.0.6",
     "path": "^0.12.7",
     "reddit-image-fetcher": "^2.0.9",
+    "ts-node": "^10.2.1",
     "wokcommands": "^1.3.983"
   },
   "main": "index.ts",
