--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "path": "^0.12.7",
     "reddit-image-fetcher": "^2.0.9",
     "ts-node": "^10.2.1",
+    "typescript": "^4.4.3",
     "wokcommands": "^1.3.983"
   },
   "main": "index.ts",
