--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^6.0.6",
     "path": "^0.12.7",
     "reddit-image-fetcher": "^2.0.9",
+    "topgg-autoposter": "^2.0.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
     "wokcommands": "^1.3.983"
