--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "path": "^0.12.7",
     "reddit-image-fetcher": "^2.0.9",
     "requests": "^0.3.0",
+    "statcord.js": "^3.3.0",
     "topgg-autoposter": "^2.0.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
