--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "chalk": "^4.1.2",
+    "dbots": "^10.0.0",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "mongoose": "^6.0.6",
