--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   },
   "description": "A small Discord Bot with a bunch of fun commands to get cute images of animals or answer your deepest question with 8ball nonsense.",
   "dependencies": {
+    "@discordjs/opus": "^0.5.3",
     "axios": "^0.21.4",
     "chalk": "^4.1.2",
     "dbots": "^10.0.0",
+    "discord-music-player": "^8.3.1",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
+    "ffmpeg-static": "^4.4.0",
     "mongoose": "^6.0.6",
     "path": "^0.12.7",
     "reddit-image-fetcher": "^2.0.9",
