--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "description": "A small Discord Bot with a bunch of fun commands to get cute images of animals or answer your deepest question with 8ball nonsense.",
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
+    "@types/mongoose": "^5.11.97",
     "axios": "^0.21.4",
     "chalk": "^4.1.2",
     "dbots": "^10.0.0",
