--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "main": "index.ts",
   "scripts": {
-    "test": "jest --coverage=true --coverageReporters=cobertura"
+    "test": "test.ts"
   },
   "repository": {
     "type": "git",
@@ -44,7 +44,6 @@
   },
   "homepage": "https://github.com/Antares-Network/AntaresBot#readme",
   "devDependencies": {
-    "@types/uuid": "^8.3.1",
-    "jest": "^28.1.0"
+    "@types/uuid": "^8.3.1"
   }
 }
